# sentiment_analysis

./: .gitattributes  .gitignore  Demo.ipynb  README.md  notes.txt  pyproject.toml  tokenizer.model  tokenizer.vocab
config/: small_generative.json
experiment_settings/: corpus.json  default.json  large.json  large_mixed_single.json  nano.json  nano_max.json  nano_mean.json  nano_reg.json  settings.txt  small_generative.json  small_genrative.json  small_mixed.json  small_mixed_mean.json  small_mixed_single.json  test_split.json  tiny.json
experiment_settings/.ipynb_checkpoints/: default-checkpoint.json
experiments_settings/: corpus.json  default.json  tokenizer_settings.json
metrics_friday/1/: _CHECKPOINT_METADATA  _METADATA  _sharding  checkpoint  manifest.ocdbt
models/1/: _CHECKPOINT_METADATA  _METADATA  _sharding  checkpoint  manifest.ocdbt
models_backup/1/: _CHECKPOINT_METADATA  _METADATA  _sharding  checkpoint  manifest.ocdbt
nb/: attention_visual.ipynb
results/small_generative_2024-08-04_23-50-54/: results.json  settings.json
results/small_genrative_2024-07-23_23-37-39/: metadata.json  settings.json
results/small_genrative_2024-08-04_23-50-54/: metadata.json  settings.json
results/small_mixed_single_2024-07-19_02-05-01/: metadata.json  results.json  settings.json
sentiment_analysis/: attention.py  cli.py  constants.py  data_loader.py  eval.py  experiment.py  generate.py  inference.py  main.py  metrics.py  network.py  optimizer.py  plot_embeddings.py  positional_embeddings.py  pretokenize.py  score.py  tokenizer.py  train.py  train_cli.py  train_tokenizer.py  transformer.py  types.py  util.py  vocab.py
sentiment_analysis/analysis/: class_analysis.py
sentiment_analysis/common/: checkpointer.py  dataset_iterator.py  loop.py  metrics.py
sentiment_analysis/model/: __init__.py  attention.py  embeddings.py  feed_forward.py  loader.py  (+8 more)
sentiment_lm/: cli.py  constants.py  experiment.py  inference.py  optimizer.py  tokenizer.py  train.py  training_settings.py  util.py
vocab/: yelp-16000-consistent-v1.vocab  yelp-16000.model  yelp-16000.vocab  yelp-32000-consistent-oneword-v1.vocab  yelp-32000-strict-v1.vocab  yelp-32000.model  yelp-32000.vocab
(+28 files in other folders)
