[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Gabriel keith <gabe.keith@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = {extras = ["cpu"], version = "^0.4.28"}
flax = "^0.8.4"
sentencepiece = "^0.2.0"
optax = "^0.2.2"
orbax-checkpoint = "^0.5.15"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
tensorboardx = "^2.6.2.2"
crc32c = "^2.4"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
penzai = {extras = ["notebook"], version = "^0.1.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
